# digitization-1day-intern-20240803

./: Dockerfile
backend/: .gitignore  README.md  log.txt  main.py  memo.md  pyproject.toml  resolve.md
backend/app/: main.py
backend/app/models/: entry.py  virtual_card.py
backend/app/models/inspector/: base.py  extra_inspector.py  hands_on_inspector.py  inspector.py  test_inspector.py  work_inspector.py
backend/app/models/normalizer/: base.py  (+14 more)
backend/app/repositories/: base.py  correct.py  delivered.py  inspector.py  virtual_card.py
backend/app/router/: delivered.py  inspector.py  normalizer.py  virtual_card.py
backend/app/schemas/: entry.py  virtual_card.py
backend/app/utils/: kanji_number_converter.py
backend/static/correct/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  (+11 more)
backend/static/inspected/: 0.json
backend/static/virtual_cards/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  (+11 more)
backend/tools/scoring/: README.md  main.py  start.py  test.py
(+17 files in other folders)
