[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "yumehiro-omori-sansan",email = "omori@sansan.com"}
]
readme = "README.md"

requires-python = ">= 3.11"

dependencies = [
    "fastapi>=0.111.1",
    "uvicorn>=0.30.3",
    "pydantic>=2.8.2",
    "requests>=2.32.3",
]


[tool.rye.scripts]
serve = "uvicorn app.main:app --reload"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
dev-dependencies = [
    "ruff>=0.5.5",
    "mypy>=1.11.0",
    "pytest>=8.3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app/"]
